# MandelbrotSet

./: CMakeLists.txt  Main.cpp  Mandelbrot_Set.cpp  Mandelbrot_Set.h  README.md
